--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -14,7 +14,7 @@ header.header
                             ul.nav__list
                                 li.nav__item 
                                     a.nav__link.linkHead(href="/portfolio") Портфолио
-                                li.nav__item 
+                                li.nav__item.--active 
                                     a.nav__link.linkHead(href="/reviews") ОТЗЫВЫ
                                 li.nav__item 
                                     a.nav__link.linkHead(href="/blog") БЛОГ
