--- a/src/pages/reviews.pug
+++ b/src/pages/reviews.pug
@@ -17,7 +17,7 @@
         main.page
         
             +SectionHero(
-                'Клиенты о нас',
+                'Клиенты о&nbsp;нас',
                 'При выполнении проекта мы&nbsp;нередко становимся частью команды заказчика: глубоко погружаемся в&nbsp;задачу, искренне переживаем за&nbsp;результат и&nbsp;общаемся с&nbsp;коллегами на&nbsp;одном языке. В&nbsp;сочетании с&nbsp;высокой результативностью такой подход неизменно вызывает благодарную реакцию со&nbsp;стороны клиентов. Некоторые отзывы мы&nbsp;получили в&nbsp;письменном виде и&nbsp;предлагаем их&nbsp;вашему вниманию.',
                 {
                     breadcrumbs: [
@@ -29,7 +29,30 @@
                     ]
                 }
             )
-                
+
+            +SectionReviewsList([
+                {
+                    src: 'https://mainbit.ru/upload/iblock/4ed/bgp7yf1iw02hqnynva6zyx20s2tmq24p.jpg',
+                    text: 'Мы&nbsp;рады успешному сотрудничеству с&nbsp;командой MainBit, результат работы которой нас полностью устраивает. Планируем продолжать взаимодействие и&nbsp;по&nbsp;мере необходимости реализовывать новые совместные проекты.',
+                    name: 'Ольга Широкова',
+                    post: 'Директор по&nbsp;маркетингу LaMaree',
+                    site: 'Интернет-магазин LaMaree'
+                },{
+                    src: 'https://mainbit.ru/upload/iblock/4ed/bgp7yf1iw02hqnynva6zyx20s2tmq24p.jpg',
+                    text: 'Мы&nbsp;рады успешному сотрудничеству с&nbsp;командой MainBit, результат работы которой нас полностью устраивает. Планируем продолжать взаимодействие и&nbsp;по&nbsp;мере необходимости реализовывать новые совместные проекты.',
+                    name: 'Ольга Широкова',
+                    post: 'Директор по&nbsp;маркетингу LaMaree',
+                    site: 'Интернет-магазин LaMaree'
+                },{
+                    src: 'https://mainbit.ru/upload/iblock/4ed/bgp7yf1iw02hqnynva6zyx20s2tmq24p.jpg',
+                    text: 'Мы&nbsp;рады успешному сотрудничеству с&nbsp;командой MainBit, результат работы которой нас полностью устраивает. Планируем продолжать взаимодействие и&nbsp;по&nbsp;мере необходимости реализовывать новые совместные проекты.',
+                    name: 'Ольга Широкова',
+                    post: 'Директор по&nbsp;маркетингу LaMaree',
+                    site: 'Интернет-магазин LaMaree'
+                }
+            ])
+
+            +print 
 
         include ../components/footer/footer
     
