--- a/src/sections/sections.pug
+++ b/src/sections/sections.pug
@@ -4,4 +4,6 @@ include ./portfolio/portfolio
 include ./portfolioList/portfolioList
 include ./services/services
 include ./reviews/reviews
+include ./reviewsList/reviewsList
 include ./blog/blog
+include ./blogList/blogList
