--- a/src/components/print/print.scss
+++ b/src/components/print/print.scss
@@ -2,6 +2,7 @@
     position: fixed;
     inset: 0;
     opacity: 0;
+    padding: 20px;
     background-color: rgba(0,0,0,.85);
     transition: opacity $transitionLong;
     transform: translateX(-100%);
@@ -13,14 +14,14 @@
         z-index: 100;
         & .print__image {
             opacity: 1;
-            transform: translate3d(-50%, -50%, 0) scale3d(1, 1, 1);
+            //transform: translate3d(-50%, -50%, 0) scale3d(1, 1, 1);
+            transform: translate3d(-50%, -50%, 0);
         }
     }
     &__container {
         position: relative;
         width: 100%;
         height: 100%;
-        padding: 20px;
         overflow: hidden;
     }
     &__image {
@@ -30,7 +31,8 @@
         width: auto;
         opacity: 0;
         will-change: opacity;
-        transform: translate3d(-50%, -50%, 0) scale3d(0.85, 0.85, 0.85);
+        //transform: translate3d(-50%, -50%, 0) scale3d(0.85, 0.85, 0.85);
+        transform: translate3d(-50%, calc(-50% - 40px), 0);
         transition: $transitionLong .4s;
         box-shadow: $shadow;
     }
