--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -112,6 +112,56 @@ label {
     background-color: $bgGray;
 }
 
+.page {
+    &__layout {
+        padding: 61px 0 92px;
+        @media (min-width: 768px) {
+            padding: 91px 0 82px;
+        }
+        @media (min-width: 1200px) {
+            padding: 97px 0 150px;
+        }
+        @media (min-width: 1920px) {
+            padding: 110px 0 150px;
+        }
+    }
+    &__row {
+        justify-content: space-between;
+    }
+    &__content {
+        @media (min-width: 1200px) {
+            padding-left: 60px;
+        }
+    }
+    &__aside {
+        display: flex;
+        flex-direction: column;
+        margin-top: 16px;
+        @media (min-width: 768px) {
+            margin-top: 0;
+        }
+        @media (min-width: 1200px) {
+            padding-right: 58px;
+        }
+        & .asideBlock {
+            & > * {
+                order: 2;
+                @media (min-width: 992px) {
+                    order: unset;
+                }
+            }
+            &:first-child {
+                order: 1;
+                margin-top: 47px;
+                @media (min-width: 992px) {
+                    order: unset;
+                    margin-top: 0;
+                }
+            }
+        }
+    }
+}
+
 .section {
     position: relative;
     padding: 60px 0;
@@ -425,6 +475,19 @@ label {
         line-height: 1.25;
         letter-spacing: 0.184em;
     }
+    &--wide {
+        width: 100%;
+    }
+    &--mini {
+        padding: 20px 20px 15px;
+        color: $textGray;
+        font-size: 12px;
+        font-weight: 700;
+        line-height: 1.25;
+        letter-spacing: 0.184em;
+        text-align: center;
+        background-color: $bgViolet;
+    }
 }
 
 // Arrow
@@ -483,5 +546,24 @@ label {
                 transform: translate3d(-50%, -50%, 0) scale3d(1, 1, 1);
             }
         }
+    }
+}
+
+.map {
+    width: 100%;
+    height: 300px;
+    margin-bottom: 60px;
+    background-color: $bgWhite;
+    @media (min-width: 576px) {
+        height: 380px;
+    }
+    @media (min-width: 768px) {
+        margin-bottom: 90px;
+    }
+    @media (min-width: 992px) {
+        height: 450px;
+    }
+    @media (min-width: 1200px) {
+        height: 600px;
     }
 }
