--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -16,6 +16,7 @@
 @import '/src/components/print/print.scss';
 @import '/src/components/asideBlock/asideBlock.scss';
 @import '/src/components/pagination/pagination.scss';
+@import '/src/components/formated/formated.scss';
 @import '/src/components/header/header.scss';
 @import '/src/components/footer/footer.scss';
 
@@ -28,4 +29,6 @@
 @import '/src/sections/reviews/reviews.scss';
 @import '/src/sections/reviewsList/reviewsList.scss';
 @import '/src/sections/blog/blog.scss';
+@import '/src/sections/blogPage/blogPage.scss';
 @import '/src/sections/blogList/blogList.scss';
+@import '/src/sections/404/404.scss';
