--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -4,6 +4,8 @@ $bgGray: #F6F5F7;
 $bgGray60: #f6f5f799;
 $bgViolet: #2D1940;
 $bgVioletLight: #b368ff;
+$bgTw: #55ADEE;
+$bgVk: #4D75A3;
 
 // Text
 $textError: #f66;
