--- a/src/sections/sections.pug
+++ b/src/sections/sections.pug
@@ -7,3 +7,5 @@ include ./reviews/reviews
 include ./reviewsList/reviewsList
 include ./blog/blog
 include ./blogList/blogList
+include ./blogPage/blogPage
+include ./404/404
