--- a/src/pages/404.pug
+++ b/src/pages/404.pug
@@ -13,7 +13,7 @@
 
     .wrapper
         main.page 
-            
+            +Section404()
     
     <script type="module" src="/src/js/index.js"></script>
 
