--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -11,6 +11,7 @@ $bgVk: #4D75A3;
 $textError: #f66;
 $textErrorDark: #FF4A26;
 $textWhite: #FFF;
+$textBlue: #73B9FF;
 $textGray: #F6F5F7;
 $textGray60: #f6f5f799;
 $textViolet: #2D1940;
