--- a/src/sections/portfolio/portfolio.scss
+++ b/src/sections/portfolio/portfolio.scss
@@ -68,7 +68,7 @@
     &__item {
         height: 250px;
         margin-top: 45px;
-        background-color: $bgWhite;
+        //background-color: $bgWhite;
         @media (min-width: 576px) {
             height: 416px;
             margin-top: 45px;
